--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,33 @@
-<p>login-page works!</p>
+<div class="login-page">
+  <form class="login-page__form" [formGroup]="formGroup">
+    <div class="login-page__heading-wrapper">
+      <h2 class="login-page__heading">Вход</h2>
+      <p-divider></p-divider>
+    </div>
+    <p-inputGroup>
+      <p-inputGroupAddon>
+        <i class="pi pi-user"></i>
+      </p-inputGroupAddon>
+      <input
+        class="login-page__login-input"
+        type="text"
+        placeholder="Логин"
+        pInputText
+        formControlName="login"
+      />
+    </p-inputGroup>
+    <p-inputGroup>
+      <p-inputGroupAddon>
+        <i class="pi pi-lock"></i>
+      </p-inputGroupAddon>
+      <p-password
+        class="login-page__password-input"
+        [placeholder]="'Пароль'"
+        [toggleMask]="true"
+        formControlName="password"
+        [style]="{ width: '100%' }"
+      ></p-password>
+    </p-inputGroup>
+    <p-button class="login-page__submit-button">Войти</p-button>
+  </form>
+</div>
