--- a/src/app/shared/styles/_typography.scss
+++ b/src/app/shared/styles/_typography.scss
@@ -5,3 +5,20 @@
 
 $heading-font: Tahoma, sans-serif;
 $body-font: Roboto, Tahoma, sans-serif;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $heading-font;
+}
+
+html {
+  font-family: $body-font;
+}
+
+:root {
+  --font-family: Roboto, Tahoma, sans-serif;
+}
