--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,14 +1,27 @@
 @import 'mixins';
+@import 'colors';
+
+.login-page {
+  width: 100%;
+  height: 100vh;
+
+  @include flex($direction: column);
+}
 
 .login-page__form {
+  position: relative;
   margin: 0 auto;
+
   padding: 30px 20px;
-  @include flex($direction: column, $gap: 25px);
+  @include flex($direction: column, $gap: 30px);
+
+  background-color: $background;
 
   width: clamp(300px, 60%, 600px);
-  border-radius: 25px;
-
   @include drop-shadow();
+
+  border-radius: 25px;
+  border: 2px solid $primary;
 }
 
 .login-page__heading-wrapper {
@@ -28,4 +41,7 @@
 .login-page__submit-button ::ng-deep button {
   width: 100%;
   justify-content: center;
+  background: $gradient-primary-secondary;
+  border: 2px solid $primary;
+  font-weight: bold;
 }
