refactor: перенос всей страницы авторизации в отдельный модуль, выделение компонент инпутов

--- a/src/app/auth/login-page/login-page.component.scss
+++ b/src/app/auth/login-page/login-page.component.scss
@@ -33,6 +33,11 @@
   margin: 0;
 }
 
+.login-page__password-input,
+.login-page__login-input {
+  width: 100%;
+}
+
 .login-page__submit-button {
   width: 70%;
   text-align: center;
