feat: настроено отображение ошибки валидации логина

--- a/src/app/shared/styles/_colors.scss
+++ b/src/app/shared/styles/_colors.scss
@@ -3,6 +3,7 @@ $background: #ffffff;
 $primary: #c7f3fa;
 $secondary: #facef9;
 $accent: #6c0fe6;
+$error: rgb(199, 9, 9);
 
 $gradient-primary-secondary: linear-gradient(
   to right,
