--- a/src/app/auth/components/login-input/login-input.component.html
+++ b/src/app/auth/components/login-input/login-input.component.html
@@ -1,18 +1,17 @@
-<p-inputGroup>
+<p-inputGroup class="login-input">
   <p-inputGroupAddon>
     <i class="pi pi-user"></i>
   </p-inputGroupAddon>
   <input
-    class="login-page__login-input"
     type="text"
     placeholder="Логин"
     pInputText
     [formControl]="control"
-    (input)="op.show($event)"
+    (input)="onInput($event, op)"
   />
-  <p-overlayPanel #op>
+  <p-overlayPanel class="login-input__error-panel" #op>
     <ng-template pTemplate="content">
-      <h5>Почта не валидна</h5>
+      <h5 class="login-input__error-text">Введеная вами почта не валидна</h5>
     </ng-template>
   </p-overlayPanel>
 </p-inputGroup>
