--- a/src/app/auth/components/password-input/password-input.component.html
+++ b/src/app/auth/components/password-input/password-input.component.html
@@ -1,9 +1,8 @@
-<p-inputGroup [style]="{ width: '100%' }">
+<p-inputGroup class="password-input" [style]="{ width: '100%' }">
   <p-inputGroupAddon>
     <i class="pi pi-lock"></i>
   </p-inputGroupAddon>
   <p-password
-    class="login-page__password-input"
     [placeholder]="'Пароль'"
     [toggleMask]="true"
     [formControl]="control"
@@ -15,12 +14,11 @@
   >
     <ng-template pTemplate="footer">
       <p-divider></p-divider>
-      <p class="mt-2">Требования</p>
-      <ul class="pl-2 ml-2 mt-0" style="line-height: 1.5">
-        <li>Одна строчная буква</li>
-        <li>Одна заглавная буква</li>
-        <li>Одна цифра</li>
-        <li>Минимум 8 символов</li>
+      <p class="mt-2">Требования:</p>
+      <ul class="password-input__errors" style="line-height: 1.5">
+        <li *ngFor="let req of requrements | keyvalue">
+          {{ req.key | formatPasswordRequirement: req.value }}
+        </li>
       </ul>
     </ng-template>
   </p-password>
