--- a/src/app/auth/login-page/login-page.component.scss
+++ b/src/app/auth/login-page/login-page.component.scss
@@ -42,6 +42,12 @@
   width: 70%;
   text-align: center;
   cursor: pointer;
+
+  transition: scale ease-in-out 0.3s;
+
+  &:hover {
+    scale: 1.05;
+  }
 }
 
 .login-page__submit-button ::ng-deep button {
