fix: убрал border-radius у поля ввода пароля

--- a/src/app/auth/components/password-input/password-input.component.html
+++ b/src/app/auth/components/password-input/password-input.component.html
@@ -3,6 +3,7 @@
     <i class="pi pi-lock"></i>
   </p-inputGroupAddon>
   <p-password
+    class="password-input__field"
     [placeholder]="'Пароль'"
     [toggleMask]="true"
     [formControl]="control"
