feat: добавлен border-radius полям ввода

--- a/src/app/auth/components/login-input/login-input.component.html
+++ b/src/app/auth/components/login-input/login-input.component.html
@@ -3,6 +3,7 @@
     <i class="pi pi-user"></i>
   </p-inputGroupAddon>
   <input
+    class="login-input__field"
     type="text"
     placeholder="Логин"
     pInputText
