--- a/src/app/auth/components/password-input/password-input.component.scss
+++ b/src/app/auth/components/password-input/password-input.component.scss
@@ -4,5 +4,6 @@
 }
 
 .password-input__field ::ng-deep input {
-  border-radius: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
