--- a/src/app/auth/components/login-input/login-input.component.html
+++ b/src/app/auth/components/login-input/login-input.component.html
@@ -12,7 +12,7 @@
   />
   <p-overlayPanel class="login-input__error-panel" #op>
     <ng-template pTemplate="content">
-      <h5 class="login-input__error-text">Введеная вами почта не валидна</h5>
+      <h5 class="login-input__error-text">Введённая почта некорректна</h5>
     </ng-template>
   </p-overlayPanel>
 </p-inputGroup>
