refactor: убрал инлайн стили из компонент, завернул ::ng-deep в :host

--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -13,7 +13,8 @@
       [control]="formGroup.controls.password"
     ></app-password-input>
     <p-button
-      class="login-page__submit-button"
+      class="login-page__submit-button-wrapper"
+      [styleClass]="'login-page__submit-button'"
       (mouseleave)="onSubmitButtonMouseOut()"
       (onClick)="onSubmit($event)"
       >Войти</p-button
