--- a/src/app/pages/auth/components/password-input/password-input.component.html
+++ b/src/app/pages/auth/components/password-input/password-input.component.html
@@ -1,13 +1,13 @@
-<p-inputGroup class="password-input" [style]="{ width: '100%' }">
+<p-inputGroup class="password-input">
   <p-inputGroupAddon>
     <i class="pi pi-lock"></i>
   </p-inputGroupAddon>
   <p-password
-    class="password-input__field"
     [placeholder]="'Пароль'"
     [toggleMask]="true"
     [formControl]="control"
-    [style]="{ width: '100%' }"
+    [styleClass]="'password-input__field-wrapper'"
+    [inputStyleClass]="'password-input__field'"
     [promptLabel]="'Введите пароль'"
     [weakLabel]="'Слабый'"
     [mediumLabel]="'Средний'"
@@ -16,7 +16,7 @@
     <ng-template pTemplate="footer">
       <p-divider></p-divider>
       <p class="mt-2">Требования:</p>
-      <ul class="password-input__errors" style="line-height: 1.5">
+      <ul class="password-input__errors">
         <li *ngFor="let req of requrements | keyvalue">
           {{ req.key | formatPasswordRequirement: req.value }}
         </li>
