--- a/src/app/pages/auth/components/password-input/password-input.component.scss
+++ b/src/app/pages/auth/components/password-input/password-input.component.scss
@@ -1,9 +1,17 @@
+:host::ng-deep {
+  .password-input__field-wrapper,
+  .password-input__field {
+    width: 100%;
+  }
+
+  .password-input__field {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+}
+
 .password-input__errors {
   list-style: none;
   padding-left: 0;
-}
-
-.password-input__field ::ng-deep input {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  line-height: 1.5;
 }
