--- a/src/app/pages/auth/components/password-input/password-input.component.scss
+++ b/src/app/pages/auth/components/password-input/password-input.component.scss
@@ -1,17 +1,19 @@
 :host::ng-deep {
-  .password-input__field-wrapper,
-  .password-input__field {
-    width: 100%;
-  }
+  .password-input {
+    &__field-wrapper,
+    &__field {
+      width: 100%;
+    }
 
-  .password-input__field {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-}
+    &__field {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
 
-.password-input__errors {
-  list-style: none;
-  padding-left: 0;
-  line-height: 1.5;
+    &__errors {
+      list-style: none;
+      padding-left: 0;
+      line-height: 1.5;
+    }
+  }
 }
