feat: добавлен футер, изменены цвета в хедере

--- a/src/app/pages/home/components/footer/footer.component.html
+++ b/src/app/pages/home/components/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="footer__social-links">
+    <a
+      class="footer-link"
+      pButton
+      pRipple
+      [rounded]="true"
+      [outlined]="true"
+      *ngFor="let item of socialLinks"
+      [href]="item.url!"
+    >
+      <i class="{{ item.icon }} footer-link__icon"></i
+    ></a>
+  </div>
+  <span class="footer__year">{{ currentYear }}</span>
+</footer>
