feat: добавлен логотип в хедер, изменён favicon

--- a/src/app/pages/home/components/header/header.component.html
+++ b/src/app/pages/home/components/header/header.component.html
@@ -5,6 +5,7 @@
     [styleClass]="'menubar-align-right menubar-large-icon'"
   >
     <ng-template pTemplate="start">
+      <app-logo class="header__logo"></app-logo>
       <h1 class="header__heading">Финансы</h1>
     </ng-template>
   </p-menubar>
