--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -5,7 +5,7 @@
     font-weight: bold;
 
     @media screen and (max-width: 960px) {
-      top: 135%;
+      top: 107.5%;
       left: 15%;
       background-color: var(--grey-600);
     }
@@ -32,10 +32,19 @@
     width: 100%;
   }
 
+  &__logo {
+    height: 60px;
+  }
+
   &__heading {
+    display: inline-block;
     position: relative;
-    bottom: 5px;
-    padding-right: 10px;
+    bottom: 15px;
+    padding: 0 10px;
+
+    @media (max-width: 400px) {
+      display: none;
+    }
   }
 
   &_shrunk {
