--- a/src/app/pages/home/components/home-page/home-page.component.html
+++ b/src/app/pages/home/components/home-page/home-page.component.html
@@ -22,3 +22,20 @@
     </ng-template>
   </p-carousel>
 </section>
+<section class="home-page__diversification-section diversification-section">
+  <h2 class="diversification-section__heading">
+    Мир банковских услуг изменился
+  </h2>
+  <p class="diversification-section__main-text">
+    <span class="diversification-section__emphasized-text"
+      >Диверсификация является стратегическим приоритетом.</span
+    >
+    Финансовым учреждениям необходимо повышать уровень потребительских и малых
+    бизнес-кредитов, предоставляя при этом современный цифровой опыт.
+  </p>
+</section>
+<img
+  src="../../../../../assets/images/home-portfolio.svg"
+  alt=""
+  class="home-page__portfolio-image"
+/>
