refactor: смена картинок и их именований

--- a/src/app/pages/home/components/header/header.component.html
+++ b/src/app/pages/home/components/header/header.component.html
@@ -5,7 +5,11 @@
     [styleClass]="'menubar-align-right menubar-large-icon'"
   >
     <ng-template pTemplate="start">
-      <app-logo class="header__logo"></app-logo>
+      <img
+        src="../../../../../assets/images/logo.svg"
+        alt="Логотип"
+        class="header__logo"
+      />
       <h1 class="header__heading">Финансы</h1>
     </ng-template>
   </p-menubar>
