--- a/src/app/pages/home/components/home-page/home-page.component.html
+++ b/src/app/pages/home/components/home-page/home-page.component.html
@@ -35,7 +35,7 @@
   </p>
 </section>
 <img
-  src="../../../../../assets/images/home-portfolio.svg"
-  alt=""
+  src="../../../../../assets/images/home-page/portfolio.svg"
+  alt="Картинка портфолио"
   class="home-page__portfolio-image"
 />
