feat: изменён скроллбар, добавлен зелёный (бирюзовый) цвет в тему

--- a/src/app/shared/styles/theme/_colors.scss
+++ b/src/app/shared/styles/theme/_colors.scss
@@ -22,6 +22,7 @@ $gradient-primary-secondary-darkened: linear-gradient(
 $colors: (
   'red': #bd2f25,
   'white': #ffffff,
+  'green': #00ffc8,
   'teal': $primaryColor,
   'pink': $secondaryColor,
   'purple': $accentColor,
