--- a/src/app/pages/home/components/home-page/home-page.component.html
+++ b/src/app/pages/home/components/home-page/home-page.component.html
@@ -23,19 +23,44 @@
   </p-carousel>
 </section>
 <section class="home-page__diversification-section diversification-section">
-  <h2 class="diversification-section__heading">
-    Мир банковских услуг изменился
-  </h2>
-  <p class="diversification-section__main-text">
-    <span class="diversification-section__emphasized-text"
-      >Диверсификация является стратегическим приоритетом.</span
-    >
-    Финансовым учреждениям необходимо повышать уровень потребительских и малых
-    бизнес-кредитов, предоставляя при этом современный цифровой опыт.
-  </p>
+  <div class="diversification-section__text-block">
+    <h2 class="diversification-section__heading">
+      Мир банковских услуг изменился
+    </h2>
+    <p class="diversification-section__main-text">
+      <span class="diversification-section__emphasized-text"
+        >Диверсификация является стратегическим приоритетом.</span
+      >
+      Финансовым учреждениям необходимо повышать уровень потребительских и малых
+      бизнес-кредитов, предоставляя при этом современный цифровой опыт.
+    </p>
+  </div>
+  <img
+    src="../../../../../assets/images/home-page/portfolio.svg"
+    alt="Картинка портфолио"
+    class="diversification-section__portfolio-image"
+  />
 </section>
-<img
-  src="../../../../../assets/images/home-page/portfolio.svg"
-  alt="Картинка портфолио"
-  class="home-page__portfolio-image"
-/>
+<section class="home-page__currencies-section currencies-section">
+  <div class="currencies-section__heading-wrapper">
+    <span class="currencies-section__heading-emoji">📈</span>
+    <h2 class="currencies-section__heading">Изучите Пульс Криптовалюты</h2>
+    <span class="currencies-section__heading-emoji">📉</span>
+  </div>
+  <p class="currencies-section__description">
+    В этой секции вы найдете графики курсов криптовалют, которые позволят вам
+    проникнуть в сердце финансового мира будущего. Отслеживайте динамику курсов,
+    анализируйте тренды и делайте обоснованные решения.
+  </p>
+  <div class="currencies-section__charts-wrapper charts-wrapper">
+    <div class="charts-wrapper__heading">
+      <p-tabMenu
+        class="charts-wrapper__tab-menu"
+        [model]="currenciesMenuItems"
+      ></p-tabMenu>
+    </div>
+    <div class="charts-wrapper__main">
+      <p-chart></p-chart>
+    </div>
+  </div>
+</section>
